--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -36,6 +36,28 @@
   }
 }
 
+.card-add-link {
+  color: white;
+  border-radius: 50%;
+  border: 1px solid white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 30px;
+  width: 30px;
+  position: absolute;
+  left: 10px;
+  top: 10px;
+  opacity: 0.8;
+  font-weight: lighter;
+  text-decoration: none;
+  &:hover {
+    color: white;
+    text-decoration: none;
+    opacity: 1;
+  }
+}
+
 .card-tags {
   display: flex;
   position: absolute;
@@ -47,7 +69,6 @@
     padding: 2px 4px;
     border-radius: 3px;
   }
-
   a {
     color: white;
   }
